2007-09-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/CairoDoc.py: Really fix text position in the box.

2007-09-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/PdfDoc.py: Fix pagination problems.
	* src/docgen/CairoDoc.py: Fix pagination problem. Fix text position in
	the box.

2007-09-27  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/FilterEditor/_EditRule.py: wrong filter selection, bug #807
	Based on work Johan

2007-09-26 James G. Sack <jgsack@san.rr.com>
	* src/plugins/Check.py: same sex marriage need not be CIVIL_UNION, bug #1245
	This includes the 8374 commit which was not present in trunk (??)

2007-09-26  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Selectors/_SelectNote.py:a note selector for the reports
	* src/Selectors/Makefile.am: add selectNote
	* po/POTFILES.in: add selectNote

2007-09-26  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Selectors/_BaseSelector.py: add column sorting
	* src/Selectors/_SelectEvent.py:remove whitespace

2007-09-25  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_MediaView.py: COLUMN_NAMES as class constant for reuse
	* src/DataViews/_RepositoryView.py: COLUMN_NAMES as class constant for reuse
	* src/DataViews/_SourceView.py: COLUMN_NAMES as class constant for reuse
	* src/DataViews/_EventView.py: COLUMN_NAMES as class constant for reuse
	* src/DataViews/_FamilyList.py: COLUMN_NAMES as class constant for reuse
	* src/DataViews/_PlaceView.py: COLUMN_NAMES as class constant for reuse
	* src/DataViews/_NoteView.py: COLUMN_NAMES as class constant for reuse
	* src/Selectors/_BaseSelector.py: add hideable searchbar to selector
	* src/Selectors/_SelectRepository.py: implement new BaseSelector methods
	* src/Selectors/_SelectSource.py: implement new BaseSelector methods
	* src/Selectors/_SelectEvent.py: implement new BaseSelector methods
	* src/Selectors/_SelectFamily.py: implement new BaseSelector methods,